src/objects/Banana_Cluster_Meeting__c.object
<CustomObject>
    <fields>
        <fullName>Banana_Farmer__c</fullName>
        <label>Banana Farmer</label>
        <referenceTo>Banana_Farmer__c</referenceTo>
        <relationshipLabel>Banana Cluster Meetings</relationshipLabel>
        <relationshipName>Banana_Cluster_Meetings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Banana Cluster Meetings</relationshipLabel>
        <relationshipName>Banana_Cluster_Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GPS__c</fullName>
        <label>GPS</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Meeting_Date__c</fullName>
        <label>Meeting Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>Banana Cluster Meetings</relationshipLabel>
        <relationshipName>Banana_Cluster_Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Was_market_information_provided_today__c</fullName>
        <label>Was market information provided today?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Was_weather_information_provided_today__c</fullName>
        <label>Was weather information provided today?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_GAPs_were_discussed_at_the_meeting__c</fullName>
        <label>What GAPs were discussed at the meeting</label>
        <picklist>
            <picklistValues>
                <fullName>GAP 1: Soil fertility management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 2: Pruning desuckering etc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 3: Soil and water conservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 4: Support for banana plants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 5: Proper record keeping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 6: Group production and marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 7: Proper and timely weed control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 8: Banana pests and disease control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 9: Banana value addition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAP 10: Easily access agro-inputs</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Banana Cluster Meeting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Meeting_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BCM{000000}</displayFormat>
        <label>Banana Cluster Meeting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Banana Cluster Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>